--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    set $webroot '/apps/escalator/dist';
+    set $webroot '/apps/escalator/client/dist';
     root $webroot;
     index index.html;
 
