--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
     "test": "NODE_ENV=test mocha --recursive test",
     "test:coverage": "nyc npm test",
     "test:unit": "mocha --recursive test/middleware test/models test/routes",
-    "test:integration": "mocha --recursive test/integration"
+    "test:integration": "mocha --recursive test/integration",
+    "docs": "cd docs && raml2html index.raml > index.html"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
