--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -8,6 +8,7 @@ server {
     index index.html;
 
     server_name escalator.alex-abramov.com;
+    server_name escalator.techadvantage.ru;
 
     gzip on;
     gzip_disable "msie6";
@@ -28,11 +29,24 @@ server {
 
     location ~* \.(html|css|js)$ {
         root $webroot;
-        expires 3M;
-        add_header Cache-Control public;
+        # expires 3M;
+        # add_header Cache-Control public;
+    }
+
+    location /escalator/ {
+        root $webroot;
+        # expires 3M;
+        # add_header Cache-Control public;
     }
 
     location /api/ {
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://localhost:8070/;
+        expires epoch;
+    }
+
+    location /escalator/api/ {
         proxy_set_header        X-Real-IP       $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://localhost:8070/;
